--- a/Useless.cabal
+++ b/Useless.cabal
@@ -17,6 +17,6 @@ source-repository head
 
 
 Library
-    Build-Depends: base, network, process, filepath, containers, directory, split
+    Build-Depends: base, network, process, filepath, containers, directory, split, time, old-locale
     Exposed-modules: Network.Useless
 
